# displayio-universal-ui

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  code-desktop.py  code-embedded.py  code.py  gui.py  pygame_display.py  requirements.txt  setup.cfg  setup.py  unigui.py  widget.py
examples/: code-desktop.py  context.py  gui.py  logic-game.py  stopwatch.py  tree-game.py  tree-simulation.py
examples/desktop/: code-desktop.py  graph_widget.py  gui.py  logic-game.py  perf-testing.py  stopwatch.py  tree-game.py
examples/desktop/fonts/: Pixelzim-3x5-5.bdf  SNES-Italic-24.bdf  Silom-Bold-24.bdf  VCROSDMono-14.bdf  pzim3x5-5.bdf
examples/embedded/adafruit_clue/: README.md  code.py  gui.py
examples/embedded/rp2040-pitft/: README.md  code.py  gui.py
src/unigui/: __init__.py  pygamedisplay.py  unigui.py  widget.py
src/unigui/fonts/: 04b30-75.bdf  Silom-Bold-12.bdf  fipps-12pt.bdf
src/unigui_carstentb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
unigui/: __init__.py  colorscheme.py  unigui.py  widget.py
