

[metadata]
name = unigui-carstentb
version = 0.0.2
author = Carsten Thue-Bludworth
author_email = carstentb@protonmail.com
description = A cross-hardware GUI framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shulltronics/displayio-universal-ui
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = unigui
packages = find:
python_requires = >=3.10
install_requires =
    adafruit_blinka
    adafruit_blinka_displayio
    adafruit_circuitpython_display_text
    adafruit_circuitpython_bitmap_font
    adafruit_circuitpython_display_shapes
    adafruit_circuitpython_imageload
    pygame

[options.packages.find]
where = src
