

[metadata]
name = unigui-carstentb
version = 0.0.9
author = Carsten Thue-Bludworth
author_email = carstentb@protonmail.com
description = A cross-hardware GUI framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shulltronics/displayio-universal-ui
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.10
install_requires =
    adafruit_blinka >= 7.3.0
    adafruit_blinka_displayio >= 0.10.0
    adafruit_circuitpython_display_text >= 2.22.3
    adafruit_circuitpython_bitmap_font >= 1.5.6
    adafruit_circuitpython_display_shapes >= 2.4.3
    adafruit_circuitpython_imageload >= 1.16.0
    pygame >= 2.1.2

[options.packages.find]
where = src
